========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-04-03

  - Fixed a bug in "bean-doctor context" which wouldn't report the full set of
    accounts when an account's before-balance would be empty.


2016-03-31

  - Added TODAY() function to extract today's date. Not sure how useful it'll
    be.


2016-03-27

  - Added a PRICE() function to extract entries from the price database. You can
    now query for "SELECT PRICE('USD', 'CAD', date)", for example.

  - Added a boolean renderer for the SQL shell.


2016-03-26

  - Added an optional date argument to convert, so you can provide the requested
    date in a SQL query, as in "CONVERT(sum(position), "CAD", 2015-06-01)".

  - Improved the rendering of the context, removed the weird comments it used to
    render with, render an account name if the inventory is empty.

  - Ignore .DS_Store files from the file finder in ingest.


2016-03-22

  - Support multiple accounts in same ofx file. See
    https://bitbucket.org/blais/beancount/pull-requests/10/. I applied this
    one-liner: issue a balance for each statement, use the maximum date for the
    file_date() method, and added unit tests for this.


2016-03-21

  - Fixed bug in beancount.ingest.file whereby two files being filed to the same
    destination filename would clobber each other; with this fix, instead, an
    error will be generated.

  - Create an example of an importer just filing a PDF file using the external
    tool PDFminer2. If the tool isn't installed, nothing should "break" (but the
    importer won't really do its job). The tests should be skipped
    automatically, and the importing will just ignore the PDF file to be filed.


2016-03-20

  - Implemented beancount.ingest.importers.regexp and
    beancount.ingest.importers.config mixin classes to help support
    functionality which used to be available in LedgerHub.
